--- a/PilkadaJateng/Layouts/Storyboards/Base.lproj/Main.storyboard
+++ b/PilkadaJateng/Layouts/Storyboards/Base.lproj/Main.storyboard
@@ -141,7 +141,7 @@
                             <outlet property="pilkadaButton" destination="e1w-LW-kSO" id="zUM-h6-v4F"/>
                         </connections>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="s9e-4f-H5g"/>
+                    <tabBarItem key="tabBarItem" title="Informasi" image="info_50" selectedImage="info_filled_50" id="s9e-4f-H5g"/>
                     <navigationItem key="navigationItem" id="San-uK-1Lp"/>
                     <connections>
                         <outlet property="viewOutlets" destination="kqg-ij-lXR" id="Zbx-Ee-MoZ"/>
@@ -162,7 +162,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="aNG-mt-0X2">
-                                <rect key="frame" x="0.0" y="64" width="320" height="367"/>
+                                <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </tableView>
                         </subviews>
@@ -221,7 +221,7 @@
                             <outlet property="collectionView" destination="Dsk-ja-tzJ" id="fmT-Hb-JL9"/>
                         </connections>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="NDN-Bk-GuI"/>
+                    <tabBarItem key="tabBarItem" title="Item" image="wacana_50" selectedImage="wacana_filled_50" id="NDN-Bk-GuI"/>
                     <navigationItem key="navigationItem" id="B1s-iK-8uR"/>
                     <connections>
                         <outlet property="viewOutlets" destination="i5R-IP-rfc" id="JAc-x5-pdA"/>
@@ -230,6 +230,37 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2Mv-nE-poy" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3356.25" y="1575"/>
+        </scene>
+        <!--Tahapan-->
+        <scene sceneID="5Ah-5G-fQw">
+            <objects>
+                <viewController id="hiW-Ha-hgA" customClass="PJTahapanPilkadaViewController" customModule="PilkadaJateng" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Dtb-W4-fuN">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="AfK-du-WXX">
+                                <rect key="frame" x="0.0" y="64" width="320" height="367"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="AfK-du-WXX" firstAttribute="leading" secondItem="nS5-sm-tXd" secondAttribute="leading" id="QrS-hH-lbV"/>
+                            <constraint firstItem="nS5-sm-tXd" firstAttribute="bottom" secondItem="AfK-du-WXX" secondAttribute="bottom" id="fZO-GS-jPC"/>
+                            <constraint firstItem="nS5-sm-tXd" firstAttribute="trailing" secondItem="AfK-du-WXX" secondAttribute="trailing" id="tnP-kZ-hUS"/>
+                            <constraint firstItem="AfK-du-WXX" firstAttribute="top" secondItem="nS5-sm-tXd" secondAttribute="top" id="zOA-Py-PCE"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="nS5-sm-tXd"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Tahapan" id="x2z-7l-XGn"/>
+                    <connections>
+                        <outlet property="tableView" destination="AfK-du-WXX" id="Xag-NV-5Jb"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Swf-FJ-eDQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4281" y="1592"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="HCI-Ri-z86">
@@ -260,10 +291,10 @@
                     </tabBar>
                     <connections>
                         <segue destination="xZw-HS-fm8" kind="relationship" relationship="viewControllers" id="QVp-Kn-Cf6"/>
-                        <segue destination="rXv-ZP-PZT" kind="relationship" relationship="viewControllers" id="tHh-6x-znv"/>
                         <segue destination="Afr-RR-LxX" kind="relationship" relationship="viewControllers" id="6RC-R5-1tE"/>
                         <segue destination="nuB-pz-Y63" kind="relationship" relationship="viewControllers" id="OJ7-gm-1dA"/>
                         <segue destination="wmt-qd-Qhb" kind="relationship" relationship="viewControllers" id="zaO-1C-Mi1"/>
+                        <segue destination="hiW-Ha-hgA" kind="relationship" relationship="viewControllers" id="vK5-G3-DG4"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fjI-nZ-XWa" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -327,7 +358,7 @@
                             <outlet property="tableView" destination="pYj-IN-IjV" id="ygr-CN-kbV"/>
                         </connections>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="5L1-hL-ugL"/>
+                    <tabBarItem key="tabBarItem" title="Diskusi" image="chat_50" selectedImage="chat_filled_50" id="5L1-hL-ugL"/>
                     <navigationItem key="navigationItem" id="UMA-ka-ENc">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="TgS-ZS-Eua"/>
                     </navigationItem>
@@ -371,7 +402,7 @@
                             <outlet property="collectionView" destination="hGe-Hx-b18" id="6OI-RJ-Emb"/>
                         </connections>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="Ovr-VQ-XEy"/>
+                    <tabBarItem key="tabBarItem" title="Post" id="Ovr-VQ-XEy"/>
                     <toolbarItems/>
                     <navigationItem key="navigationItem" id="6WZ-RU-FQK"/>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
@@ -384,4 +415,12 @@
             <point key="canvasLocation" x="1599" y="1575"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="chat_50" width="25" height="25"/>
+        <image name="chat_filled_50" width="25" height="25"/>
+        <image name="info_50" width="25" height="25"/>
+        <image name="info_filled_50" width="25" height="25"/>
+        <image name="wacana_50" width="25" height="25"/>
+        <image name="wacana_filled_50" width="25" height="25"/>
+    </resources>
 </document>
