--- a/PilkadaJateng/Layouts/CollectionViewCells/TimelineCollectionViewCell.xib
+++ b/PilkadaJateng/Layouts/CollectionViewCells/TimelineCollectionViewCell.xib
@@ -15,14 +15,17 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="TimelineCollectionViewCell" customModule="PilkadaJateng" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="381" height="572"/>
+            <rect key="frame" x="0.0" y="0.0" width="381" height="550"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="381" height="572"/>
+                <rect key="frame" x="0.0" y="0.0" width="381" height="550"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ADD-Tl-8YO">
-                        <rect key="frame" x="10" y="84" width="361" height="387.5"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="752" translatesAutoresizingMaskIntoConstraints="NO" id="ADD-Tl-8YO">
+                        <rect key="frame" x="10" y="84" width="361" height="361"/>
+                        <constraints>
+                            <constraint firstAttribute="width" secondItem="ADD-Tl-8YO" secondAttribute="height" multiplier="1:1" id="MVM-Yy-1uj"/>
+                        </constraints>
                     </imageView>
                     <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="M35-22-UrU">
                         <rect key="frame" x="16" y="20" width="349" height="50"/>
@@ -45,7 +48,7 @@
                         </constraints>
                     </stackView>
                     <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="dZn-K0-gcb">
-                        <rect key="frame" x="16" y="486.5" width="70" height="30"/>
+                        <rect key="frame" x="16" y="460" width="70" height="30"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ccV-vi-RQW">
                                 <rect key="frame" x="0.0" y="0.0" width="30" height="30"/>
@@ -70,14 +73,16 @@
                             <constraint firstItem="LBK-WE-Sjg" firstAttribute="width" secondItem="LBK-WE-Sjg" secondAttribute="height" multiplier="1:1" id="mav-HI-a8v"/>
                         </constraints>
                     </stackView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HhG-81-55d">
-                        <rect key="frame" x="16" y="531.5" width="349" height="20.5"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="752" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HhG-81-55d">
+                        <rect key="frame" x="16" y="505" width="349" height="25"/>
+                        <mutableString key="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sed lectus a nulla bibendum viverra a in mauris. Nam porta placerat maximus. Sed porttitor tortor in consequat pellentesque. Nam ultricies sodales pharetra. Ut vestibulum massa lorem, vitae rutrum nulla venenatis ut. Donec sed aliquam quam. Aenean accumsan, neque sed finibus gravida, purus tortor pharetra mauris, at varius orci arcu eget leo. Sed ornare, nunc sed ultrices rutrum, mi neque mollis mi, faucibus eleifend lacus ligula eu risus. Fusce consequat elementum eros eu tempor. Quisque porttitor, dolor ac egestas posuere, nulla purus consectetur lorem, a sodales nisl nisi ac lorem. Cras ac feugiat eros, hendrerit interdum dui. Sed vitae libero ac felis consequat aliquam.</mutableString>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
             </view>
+            <color key="backgroundColor" red="0.87058823529411766" green="0.87058823529411766" blue="0.87058823529411766" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="dZn-K0-gcb" firstAttribute="top" secondItem="ADD-Tl-8YO" secondAttribute="bottom" constant="15" id="6y8-yc-58N"/>
                 <constraint firstItem="M35-22-UrU" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="topMargin" id="CPf-v7-Afb"/>
@@ -106,6 +111,6 @@
     </objects>
     <resources>
         <image name="chat_50" width="25" height="25"/>
-        <image name="like_50" width="50" height="50"/>
+        <image name="like_50" width="25" height="25"/>
     </resources>
 </document>
